# Ironhack-Final-Project

./: README.md  main.py  pyproject.toml
.virtual_documents/Notebooks/: Untitled.ipynb  data_cleaning.ipynb  eda.ipynb
Data/clean_data/: cleaned_loan_data.csv  cleaned_loan_updated.csv  encoded_data.csv
Data/raw-data/: Untitled.rtf
MySQL/: Ingestingdata_creating_data.sql  credit_bureau.csv
Notebooks/: MySQL_data.ipynb  customer.csv  data_cleaning.ipynb  eda.ipynb  feature_engineering.ipynb  feature_engineering_stage2.ipynb  loans.csv
Notebooks/.ipynb_checkpoints/: MySQL_data-checkpoint.ipynb  data_cleaning-checkpoint.ipynb  eda-checkpoint.ipynb  feature_engineering-checkpoint.ipynb  feature_engineering_stage2-checkpoint.ipynb
